Changed vendor name according to release review checklist: http://wiki.eclipse.org/Development_Resources/HOWTO/Release_Reviews#Checklist

--- a/bundles/org.eclipse.upr.soaml.papyrus/plugin.xml
+++ b/bundles/org.eclipse.upr.soaml.papyrus/plugin.xml
@@ -6,7 +6,7 @@
       <profile
             name="SoaML"
             path="pathmap://SOAML/soaml.profile.uml"
-            provider="Fraunhofer FOKUS">
+            provider="Eclipse UPR">
       </profile>
    </extension>
 
