--- a/bundles/org.eclipse.upr.soaml/plugin.properties
+++ b/bundles/org.eclipse.upr.soaml/plugin.properties
@@ -10,4 +10,4 @@
 ###############################################################################
 
 pluginName = SoaML Model
-providerName = www.example.org
+providerName = Eclipse UPR
