Stricter compliance to the incubation branding rules: http://wiki.eclipse.org/Development_Resources/HOWTO/Conforming_Incubation_Branding

--- a/bundles/org.eclipse.upr.soaml/plugin.properties
+++ b/bundles/org.eclipse.upr.soaml/plugin.properties
@@ -9,5 +9,5 @@
 #     Marc-Florian Wendland
 ###############################################################################
 
-pluginName = SoaML Model
+pluginName = SoaML Model (Incubation)
 providerName = Eclipse UPR
