Fix adding models directory

--- a/bundles/org.eclipse.upr.bpmn/build.properties
+++ b/bundles/org.eclipse.upr.bpmn/build.properties
@@ -14,4 +14,10 @@ source.. = src/
 output.. = bin/
 bin.includes = META-INF/,\
                .,\
-               plugin.xml
+               plugin.xml,\
+               model/
+bin.excludes = model/bpmn.profile.genmodel,\
+               model/bpmn.profile.uml,\
+               model/bpmnprof.ecore
+src.includes = model/,\
+               src/
