--- a/bundles/org.eclipse.upr.bpmn/build.properties
+++ b/bundles/org.eclipse.upr.bpmn/build.properties
@@ -16,8 +16,9 @@ bin.includes = META-INF/,\
                .,\
                plugin.xml,\
                model/
-bin.excludes = model/bpmn.profile.genmodel,\
-               model/bpmn.profile.uml,\
-               model/bpmnprof.ecore
+bin.excludes = model/BPMNProfile.xmi,\
+               model/BPMNProfile_merge.uml,\
+               model/BPMNProfile_modified.uml,\
+               model/howto.txt
 src.includes = model/,\
                src/
