--- a/bundles/org.eclipse.upr.depl.papyrus/plugin.properties
+++ b/bundles/org.eclipse.upr.depl.papyrus/plugin.properties
@@ -1,17 +1,14 @@
-
-# <copyright>
-# Copyright (c) 2014 Fraunhofer FOKUS
+###############################################################################
+# Copyright (c) 2014 Fraunhofer FOKUS and others.
 # All rights reserved. This program and the accompanying materials
 # are made available under the terms of the Eclipse Public License v1.0
 # which accompanies this distribution, and is available at
 # http://www.eclipse.org/legal/epl-v10.html
 # 
 # Contributors:
-# Max Bureck
-# Marc-Florian Wendland
-# </copyright>
-#
-# $Id$
+#     Marc-Florian Wendland
+#     Max Bureck
+###############################################################################
 
 pluginName = OMG DEPL Profile Papyrus Integration (Incubation)
 providerName = Eclipse UPR
